# finmodel-rust

./: .gitignore  .ruff.toml  Build-Financial-Model.bat  CHANGELOG.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  SETUP.md  _commitmsg.txt  _inspect_cache.py  _inspect_detail.py  _inspect_model_cache.py  bench-research.json  build_tsla_3statement_slides.py  latest.json  model.py  pyproject.toml  requirements.txt
.impeccable/: design.json
config/: branding.yaml  disclaimers.yaml
docs/: AGENTIC_ANALYST_GOAL.md  AGENTIC_WORKFLOW_VALIDATION.md  DEMO.md  FINMODEL_PRODUCTION_PROMPT.md  HANDOVER_LOG.md  IS_DYNAMIC_PLAN.md  LOCAL_SUBSCRIPTION_PROVIDERS.md  MASTER_PLAN.md  NEXT-SESSION.md  ONE_CLICK_ENGAGEMENT.md  QA_CHECKLIST.md  RELEASE_CHECKLIST.md  SPEC_powerpoint_editing.md  THIRD_PARTY_NOTICES.md  TOS.md
finmodel-core/: Cargo.toml
finmodel-core/fm-agent/: Cargo.toml
finmodel-core/fm-agent/examples/: nonusa_agentic_drive.rs
finmodel-core/fm-agent/src/: budget.rs  ids.rs  lib.rs  machine.rs  types.rs  workflows.rs
finmodel-core/fm-build/: Cargo.toml
finmodel-core/fm-build/src/: lib.rs
finmodel-core/fm-build/tests/: formula_fidelity.rs
finmodel-core/fm-cli/: Cargo.toml
finmodel-core/fm-cli/examples/: regen_snapshot.rs
finmodel-core/fm-cli/src/: main.rs
finmodel-core/fm-cli/tests/: parity.rs
finmodel-core/fm-cli/tests/fixtures/: ASML_AS_model.json  NESN_SW_model.json  NOVO-B_CO_model.json  SAND_ST_model.json
finmodel-core/fm-extract/: Cargo.toml
finmodel-core/fm-extract/examples/: extract_sandvik.rs
finmodel-core/fm-extract/src/: date.rs  edgar.rs  extract.rs  lib.rs  llm.rs  ltm.rs  period.rs  report.rs  section.rs  xbrl.rs
finmodel-core/fm-extract/src/report/: tests.rs
finmodel-core/fm-fetch/: Cargo.toml
finmodel-core/fm-fetch/src/: cache.rs  discovery.rs  edgar.rs  edinet.rs  esef.rs  jurisdiction.rs  lib.rs  market.rs  news.rs  pdf.rs  retry.rs  segments.rs  websearch.rs
finmodel-core/fm-mcp/: Cargo.toml
finmodel-core/fm-mcp/src/: lib.rs
finmodel-core/fm-mcp/tests/: handshake.rs
finmodel-core/fm-pptx/: Cargo.toml
finmodel-core/fm-pptx/src/: edit.rs  inspect.rs  lib.rs  pkg.rs  render.rs  writer.rs  xmldom.rs
finmodel-core/fm-pptx/src/writer/: deck.rs  pkgbuild.rs
finmodel-core/fm-pptx/tests/: deck_parity.rs  edit_parity.rs  inspect_parity.rs  model_deck.rs  render_gate.rs  shape_primitives.rs  writer_pure_parity.rs
finmodel-core/fm-pptx/tests/common/: mod.rs
finmodel-core/fm-research/: Cargo.toml
finmodel-core/fm-research/examples/: quality_sweep.rs
finmodel-core/fm-research/src/: adapter.rs  agent.rs  bridge.rs  collect.rs  comps.rs  events.rs  lib.rs  machine.rs  observe.rs  quality_eval.rs  research.rs  safety.rs  scoring.rs  synth.rs  web.rs
finmodel-core/fm-research/tests/: research_eval.rs
finmodel-core/fm-research/tests/baselines/: quality_v1.json  v0.4.0.json
finmodel-core/fm-research/tests/fixtures/: gold_answers.json  research_cases.json
kb/: __init__.py  accounting.py  dcm_ecm.py  ev_bridge.py  ifrs.py  lbo.py  ma.py  rogo-research-and-questions.md  sectors.py
schemas/: financial_data.py
scripts/: bench-research.ps1  gates.ps1  qa_checklist.py  run_engagement.py
src/: assumption_registry.py  assumptions.py  audit.py  audit_link.py  audit_open.py  audit_pipeline.py  audit_pptx.py  citations.py  cli.py  dcf.py  derivations.py  dev_mock.py  engine.py  extractor.py  fetcher.py  format_audit.py  is_builder.py  orchestrator.py  peers.py  preflight.py  provenance.py  public_comps.py  reconciler.py  snapshot.py  source_ledger.py  sources_report.py  utils.py  validator.py  valuation_invariants.py  verification_loop.py  verifier.py  wacc.py  writer.py
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/agents/: comps-analyst.md  credit-analyst.md  deal-screener.md  diligence-reviewer.md  earnings-reviewer.md
src-tauri/capabilities/: default.json
src-tauri/examples/: bench_research.rs
src-tauri/icons/: icon.icns
src-tauri/skills/: company-profile.md  comparable-companies.md  credit-analysis.md  dcf-valuation.md  earnings-analysis.md  lbo-screen.md  ma-accretion-dilution.md  orchestrator.md  planner.md  precedent-transactions.md  reviewer.md  task-executor.md  verification-loop.md
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/agent/: actor.rs  agents.rs  approvals.rs  child.rs  commitments.rs  context.rs  delegate.rs  driver.rs  events.rs  executors.rs  fallback.rs  grounding.rs  memo.rs  memory.rs  mod.rs  model_router.rs  modes.rs  provider.rs  registry.rs  scheduler.rs  security.rs  skills.rs  subagents.rs  tools.rs  verification.rs  workflows.rs
src-tauri/src/agent/actor/: tests.rs
src-tauri/src/commands/: agent.rs  analysis.rs  artifacts.rs  attachments.rs  benchmark.rs  cache.rs  chat.rs  dataroom.rs  mcp.rs  mod.rs  model.rs  news.rs  omp_gateway.rs  research.rs  research_state.rs  run.rs  search.rs  secrets.rs  settings.rs  subscription.rs  update.rs
src-tauri/src/store/: memory.rs  migrations.rs  mod.rs  models.rs  tests.rs
src-tauri/tests/: live_research.rs
src-tauri/tests/fixtures/: real_cards.json
tests/: audit_sp500_coverage.py  sp500_coverage_report.txt  test_assumption_registry.py  test_assumptions_ledger.py  test_audit_link.py  test_audit_open.py  test_audit_pipeline.py  test_audit_pptx.py  test_audit_pptx_sources.py  test_bam_ifrs.py  test_citations.py  test_cli_ledger_integration.py  test_dcf.py  test_dcf_ledger.py  test_derivations.py  test_engine.py  test_ev_bridge.py  test_extractor.py  test_fetcher.py  test_formula_lineage.py  test_integration.py  test_ledger_render.py  test_orchestrator_sources.py  test_output_writer_audit.py  test_peers_ledger.py  test_pptx_editor.py  test_preflight.py  test_provenance.py  test_reconciler.py  test_scenario_toggle.py  test_schemas.py  test_snapshot.py  test_source_ledger.py  test_sources_report.py  test_sse_transport.mjs  test_tieout_llm.py  test_tieout_no_regression.py  test_tieout_sector.py  test_utils.py  test_valuation_invariants.py  (+3 more)
tieout/: __init__.py  build_adhoc_oracle.py  build_ev_bridge_oracle.py  (+17 more)
(+218 files in other folders)
