[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finmodel"
version = "0.1.0"
description = "Virtual financial analyst — integrated 3-statement modeling, valuation, research, and presentation output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "xlsxwriter>=3.2.0",
    "pyyaml>=6.0.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "yfinance>=0.2.40",
    "nodriver>=0.47.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/vinit/finmodel"

[project.scripts]
finmodel = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tieout*", "kb*", "schemas*", "valuation_kit*", "config*"]
