[package]
name = "finmodel-app"
version = "0.8.6"
description = "finmodel desktop app"
authors = ["Vinit"]
edition = "2021"
rust-version = "1.96"
publish = false

# Standalone workspace — detaches from finmodel-core's workspace so the heavy
# Tauri build never touches the engine's fast CI.
[workspace]

[lib]
name = "finmodel_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
fastrand = "2"
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
rand = "0.8"
parking_lot = "0.12"
tokio = { version = "1", features = ["time", "rt", "macros", "sync"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
# v3 split platform backends behind features; WITHOUT one it silently uses an
# in-memory mock store that loses the key on restart. windows-native = real
# Windows Credential Manager (the shipped target OS).
keyring = { version = "3", features = ["windows-native"] }
# Bundled SQLite (FTS5, static — no runtime sqlite3.dll). Pinned per the plan's
# dependency gate; MSRV tracks current stable (1.96.0).
rusqlite = { version = "=0.39.0", features = ["bundled", "backup"] }
sha2 = "0.10"

# finmodel engine crates (the port). Path deps into the finmodel-core workspace.
fm-types = { path = "../finmodel-core/fm-types" }
fm-extract = { path = "../finmodel-core/fm-extract" }
fm-engine = { path = "../finmodel-core/fm-engine" }
fm-value = { path = "../finmodel-core/fm-value" }
fm-excel = { path = "../finmodel-core/fm-excel" }
fm-build = { path = "../finmodel-core/fm-build" }
fm-research = { path = "../finmodel-core/fm-research" }
fm-fetch = { path = "../finmodel-core/fm-fetch" }
fm-mcp = { path = "../finmodel-core/fm-mcp" }
fm-pptx = { path = "../finmodel-core/fm-pptx" }
fm-ifrs = { path = "../finmodel-core/fm-ifrs" }
fm-tieout = { path = "../finmodel-core/fm-tieout" }
fm-agent = { path = "../finmodel-core/fm-agent" }

# Lean release build — smaller target + exe (disk-constrained machine).
[profile.release]
strip = true
opt-level = "s"
codegen-units = 16
lto = false

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
fm-research = { path = "../finmodel-core/fm-research" }
tempfile = "3"
