[package]
name = "fm-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "Pure agent-loop reducer (phases, budgets, tool scheduling policy) for the finmodel analyst."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
