[package]
name = "fm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
fm-types = { path = "../fm-types" }
fm-tieout = { path = "../fm-tieout" }
fm-extract = { path = "../fm-extract" }
fm-engine = { path = "../fm-engine" }
fm-value = { path = "../fm-value" }
fm-ifrs = { path = "../fm-ifrs" }
fm-excel = { path = "../fm-excel" }
fm-build = { path = "../fm-build" }
fm-research = { path = "../fm-research" }
fm-fetch = { path = "../fm-fetch" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
