[package]
name = "fm-fetch"
version = "0.1.0"
edition = "2024"
description = "R.2 filing fetch crate: EDGAR XBRL pull, CIK lookup, PDF download"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli", "cookies"] }
scraper = "0.22"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
quick-xml = "0.31"
regex = "1"
