[package]
name = "fm-mcp"
version = "0.1.0"
edition = "2021"
description = "Minimal blocking MCP (Model Context Protocol) stdio client — no async runtime"
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[bin]]
name = "mock_mcp_server"
path = "src/bin/mock_mcp_server.rs"
