[package]
name = "fm-research"
version = "0.1.0"
edition = "2024"
description = "Research subsystem — benchmark filings figures into IB-grade Excel"

[dependencies]
fm-types = { path = "../fm-types" }
fm-extract = { path = "../fm-extract" }
fm-fetch = { path = "../fm-fetch" }
fm-excel = { path = "../fm-excel" }
fm-value = { path = "../fm-value" }
fm-mcp = { path = "../fm-mcp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
url = "2"
